B-F Backup Sandbox 30.4.12/src/objects/External_Contact__c.object
<CustomObject>
    <description>FDC-GD: Junction object used to associate External Contacts across multiple Accounts .</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-GD</description>
        <inlineHelpText>Select Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Distributor_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-GD</description>
        <inlineHelpText>Select Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Distributor_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of External Contact</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>External Contact</label>
    <nameField>
        <displayFormat>BF-{0000}</displayFormat>
        <label>External Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>